[package]

name = "protobuf"
version = "2.25.1"
authors = ["Stepan Koltsov <stepan.koltsov@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/stepancheg/rust-protobuf/"
repository = "https://github.com/stepancheg/rust-protobuf/"
documentation = "https://github.com/stepancheg/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers
"""

[lib]
doctest = false
bench = false

[features]
with-bytes = ["bytes"]
with-serde = ["serde", "serde_derive"]
default = []

[dependencies]
bytes = { version = "1.0", optional = true }
serde        = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }
core2 = { version = "0.3.3", default_features = false, features=["nightly","alloc"] }
spin = { version = "0.9.8", default_features = false, features = ["once"] }
hashbrown = {version = "0.13.2", default_features = false, features = ["ahash"]}
ahash = { version = "0.8.3", default_features = false }

[package.metadata.docs.rs]
all-features = true
